<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ongaku</string>
    <string name="action_settings">Settings</string>
	
    <string name="library_header">All Music On SD Card(s)</string>
	<string name="button_history">History</string>
	
	<string name="zero_time">0:00</string>
	
	<string name="access_album_art">Album Art</string>
	<string name="access_back_button">Skip Back In Song</string>
	<string name="access_play_pause_button">Play/Pause Song</string>
	<string name="access_forward_button">Skip Forward In Song</string>

	
	<string name="action_history">History</string>
	
	<string name="pref_default_directory">Set Default Music Directory</string>
	<string name="pref_default_directory_summary">Currently set to: /mnt</string>
	
	<string name="pref_clear_history">Clear History</string>
	<string name="pref_clear_history_summary">This action cannot be undone</string>
	
	<string name="toast_history_cleared">History cleared</string>
	
	<string name="widget_track_placeholder">Track Name</string>
	<string name="widget_artist_placeholder">Artist Name</string>
	<string name="widget_album_placeholder">Album Name</string>
	<string name="widget_genre_placeholder">Album Genre</string>
	<string name="widget_bitrate_placeholder">Bitrate</string>
	<string name="widget_mimetype_placeholder">Mime Type</string>
	<string name="widget_date_placeholder">Date Created</string>
	
	<string name="config_label_instructions">Use the sliders below to change the widget\'s text color. This text will preview the color you choose.</string>
	<string name="config_label_red">Red:</string>
	<string name="config_label_blue">Blue:</string>
	<string name="config_label_green">Green:</string>
	<string name="config_label_button">Create Widget</string>
	
</resources>
