<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingTop="10dp" 
   	>
        
        <ImageButton 
	        android:id="@+id/widget_open_button"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:src="@drawable/ic_open"
	        android:contentDescription="@string/access_play_pause_button"
	        android:background="@drawable/list_item_background_selector"
	        android:scaleType="fitCenter"
	        android:layout_centerHorizontal="true"
	      
        />

        <TextView
            android:id="@+id/widget_track_title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/widget_track_placeholder"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/widget_open_button"
            android:textAlignment="center"
            android:textSize="26sp"
             />
        
        <TextView
            android:id="@+id/widget_artist_title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/widget_artist_placeholder"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/widget_track_title"
            android:textAlignment="center"
            android:textSize="26sp"
            android:layout_marginLeft="10dp"
             />
        
        <TextView
            android:id="@+id/widget_album_title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/widget_album_placeholder"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/widget_artist_title"
            android:textAlignment="center"
            android:textSize="26sp"
            android:layout_marginLeft="10dp"
            />
        
		<TextView
            android:id="@+id/widget_genre_title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/widget_genre_placeholder"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/widget_album_title"
            android:textAlignment="viewEnd"
            android:textSize="22sp"
            android:layout_marginLeft="15dp"
            />
		
		<TextView
            android:id="@+id/widget_bitrate_label"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/widget_bitrate_placeholder"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/widget_genre_title"
            android:textAlignment="viewEnd"
            android:textSize="22sp"
            android:layout_marginLeft="15dp"
            />
        
</RelativeLayout>
